[김인규]  - db 문제추가

--- a/front/04_bootstrap/test/test03/test03.html
+++ b/front/04_bootstrap/test/test03/test03.html
@@ -28,7 +28,7 @@
             </section>
             <footer class="d-flex bg-secondary">
                 <div class="footer-left bg-info col-2">footer logo1</div>
-                <div class="copyright bg-success col-8">copyright</div>
+                <address class="copyright bg-success col-8">copyright</address>
                 <div class="footer-right bg-warning col-2">footer log2</div>
             </footer>
         </div>
