--- a/front/01_html/test/test03/test03.html
+++ b/front/01_html/test/test03/test03.html
@@ -7,7 +7,7 @@
        <h1>내 소개</h1>
        <h3>김인규</h3>
        <p>하루를 살자!</p>
-       <img width="200" src="https://upload.wikimedia.org/wikipedia/commons/d/dc/190501_%EC%A0%95%EC%9A%B0%EC%84%B1.jpg"></img>
+       <img width="200" src="https://upload.wikimedia.org/wikipedia/commons/d/dc/190501_%EC%A0%95%EC%9A%B0%EC%84%B1.jpg"  alt="내사진"></img>
         <ul>
             <li>나이 : 27</li>
             <li>성별 : 남</li>
