[김인규]  - 조인 일부 오류 수정  - 레이아웃 예제 일부 수정

--- a/front/03_layout/ex/ex01/ex01.html
+++ b/front/03_layout/ex/ex01/ex01.html
@@ -26,5 +26,6 @@
 
         <!-- 인라인 태그 -->
         <span class="text1">span 태그에 글씨를 쓴다.</span>
+        <span class="text1">span 태그에 글씨를 쓴다.</span>
     </body>
 </html>
