--- a/front/03_layout/ex/ex02/ex02.html
+++ b/front/03_layout/ex/ex02/ex02.html
@@ -18,8 +18,8 @@
             </nav>
             <section class="contents flex-row">
                 <section class="content1">
-                    <article class="at1"></article>
-                    <article class="at1"></article>
+                    <article class="aticle1"></article>
+                    <article class="aticle2"></article>
                 </section>
 
                 <aside class="aside1">
