--- a/front/05_javacript/ex/ex01.html
+++ b/front/05_javacript/ex/ex01.html
@@ -11,6 +11,7 @@
                 여러줄
                 주석
             */
+            alert("Hello World")
             // integer 변수 선언
             var number = 100;
             // alert(number);
