--- a/front/07_jquery/test/test04/test04.html
+++ b/front/07_jquery/test/test04/test04.html
@@ -3,7 +3,6 @@
     <head>
         <title>데이트 피커</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>        
 
@@ -13,6 +12,8 @@
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hi098123/prism-for-tistory/prism.css">
     	<script src="https://cdn.jsdelivr.net/gh/hi098123/prism-for-tistory/prism.js"></script>
+
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
 
     <body>
