--- a/front/07_jquery/test/test03/test03.html
+++ b/front/07_jquery/test/test03/test03.html
@@ -3,7 +3,6 @@
     <head>
         <title>데이트 피커</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>        
 
@@ -13,6 +12,8 @@
         
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+        <link rel="stylesheet" href="style.css" type="text/css">
 
     </head>
 
