--- a/front/07_jquery/test/test05/test05.html
+++ b/front/07_jquery/test/test05/test05.html
@@ -3,11 +3,15 @@
     <head>
         <title>회원 가입</title>
 
-        <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
+        <!-- 외부 스타일시트 정의-->
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
 
     <body>
@@ -115,8 +119,7 @@
                     $("#emailSelctor").addClass("d-none");
                 }
             })
-
-            $("#idInput").keyup(function() {
+            $("#idInput").on("input", function() {
                 var idString = $(this).val();
                 if(idString.length > 0 && idString.length < 5) {
                     $("#idInfo").removeClass("d-none");
